--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -20,7 +20,7 @@ goodwill_neutal = 0
 goodwill_friend = 100
 
 
-;коэффициенты изменения цены при торговле
+;коэффициенты изменения цены при торговле в зависимости от отношения
 ;апроксимируется линейно от attitude_neutal_threshold до attitude_friend_threshold
 trade_prices_neutral_sell_k = 1.3	
 trade_prices_friend_sell_k	= 1.1
