--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -189,12 +189,12 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
-flares			=   flares_sun_rise
-sky_texture		=	sky\sky_17_cube
+flares			=	flares_moon	
+sky_texture		=	sky\sky_14_cube
 sky_rotation	=	0
-sky_color		=	0.5,	0.5,	0.5
-far_plane		=	400
-fog_color		=	0.165, 0.169, 0.212
+sky_color		=	1.0,	1.0,	1.0
+far_plane		=	450
+fog_color		=	0.043, 0.043, 0.055
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -203,19 +203,19 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.05,   0.05,  	0.05
+ambient			=	0.043, 0.043, 0.055
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=   0.5,	0.5,	0.5, 0.4
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-12.0, 291
+hemi_color		=	0.2,	0.2,	0.2, 0.1
+sun_color		=   0.1, 0.1, 0.1
+sun_dir			=	-31.0, 296
 
 [default_a_02]
-flares			=   flares_sun_rise
-sky_texture		=	sky\sky_17_cube
+flares			=	flares_moon	
+sky_texture		=	sky\sky_14_cube
 sky_rotation	=	0
-sky_color		=	0.5,	0.5,	0.5
-far_plane		=	400
-fog_color		=	0.165, 0.169, 0.212
+sky_color		=	1.0,	1.0,	1.0
+far_plane		=	450
+fog_color		=	0.043, 0.043, 0.055
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -224,11 +224,11 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.05,   0.05,  	0.05
+ambient			=	0.043, 0.043, 0.055
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=   0.5,	0.5,	0.5, 0.4
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-12.0, 291
+hemi_color		=	0.2,	0.2,	0.2, 0.1
+sun_color		=   0.1, 0.1, 0.1
+sun_dir			=	-31.0, 296
 
 
 [sect_vibros]
