--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -189,46 +189,46 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
-flares			=   flares_sun_rise
-sky_texture		=	sky\sky_17_cube
+flares			=
+sky_texture		=	sky\sky_13_cube
 sky_rotation	=	0
-sky_color		=	1.0,    1.0,  	1.0
-far_plane		=	450
-fog_color		=	0.333, 0.341, 0.431
-fog_density		=	0.9
-rain_density	=	0.0
+sky_color		=	0.50,	0.50,	0.50
+far_plane		=	200
+fog_color		=	0.204, 0.200, 0.204
+fog_density		=	0.95
+rain_density	=	0.2
 rain_color		=	1.0,	1.0,	1.0
-thunderbolt		= 	off
+thunderbolt		= 	on
 bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.07,   0.07,  	0.07
+ambient			=	0.06,   0.06,  	0.06
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=   0.75, 0.75, 0.75, 0.5
-sun_color		=	1.000, 0.384, 0.196
-sun_dir			=	-18.0, 291
+hemi_color		=	0.50,	0.50,	0.50, 1
+sun_color		=	0.0,    0.0,  	0.0
+sun_dir			=	-25.0, 292
 
 [default_a_02]
-flares			=   flares_sun_rise
-sky_texture		=	sky\sky_17_cube
+flares			=
+sky_texture		=	sky\sky_13_cube
 sky_rotation	=	0
-sky_color		=	1.0,    1.0,  	1.0
-far_plane		=	450
-fog_color		=	0.333, 0.341, 0.431
-fog_density		=	0.9
-rain_density	=	0.0
+sky_color		=	0.50,	0.50,	0.50
+far_plane		=	200
+fog_color		=	0.204, 0.200, 0.204
+fog_density		=	0.95
+rain_density	=	0.2
 rain_color		=	1.0,	1.0,	1.0
-thunderbolt		= 	off
+thunderbolt		= 	on
 bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.07,   0.07,  	0.07
+ambient			=	0.06,   0.06,  	0.06
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=   0.75, 0.75, 0.75, 0.5
-sun_color		=	1.000, 0.384, 0.196
-sun_dir			=	-18.0, 291
+hemi_color		=	0.50,	0.50,	0.50, 1
+sun_color		=	0.0,    0.0,  	0.0
+sun_dir			=	-25.0, 292
 
 
 [sect_vibros]
