--- a/xr_3da/xrGame/w_lr300.ltx
+++ b/xr_3da/xrGame/w_lr300.ltx
@@ -21,6 +21,7 @@ ammo_mag_size		 		= 30
 ammo_class		 			= ammo_5.56x45_ss190, ammo_5.56x45_ap
 
 hand_dependence		 		= 1
+single_handed				= 0
 
 inv_name					= LR300
 inv_name_short				= LR300
