--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -189,46 +189,46 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
-flares			=
-sky_texture		=	sky\sky_13_cube
+flares			=   flares_default
+sky_texture		=	sky\sky_21_cube
 sky_rotation	=	0
-sky_color		=	0.50,	0.50,	0.50
-far_plane		=	200
-fog_color		=	0.204, 0.200, 0.204
-fog_density		=	0.95
-rain_density	=	0.2
+sky_color		=	1.0,    1.0,  	1.0
+far_plane		=	400
+fog_color		=	0.675, 0.675, 0.620
+fog_density		=	0.9
+rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
-thunderbolt		= 	on
+thunderbolt		= 	off
 bolt_period		=	3.f
 bolt_duration	=	0.25f
-wind_velocity	=	0.0 
+wind_velocity	=	20.0 
 wind_direction	=	0.0
-ambient			=	0.03,   0.03,  	0.03
+ambient			=	0.12,   0.12,  	0.12  
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.50,	0.50,	0.50, 50
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-25.0, 292
+hemi_color		=    0.675, 0.675, 0.620, 1
+sun_color		=	 0.50,    0.47,  	0.415
+sun_dir			=	-24.0, 292
 
 [default_a_02]
-flares			=
-sky_texture		=	sky\sky_13_cube
+flares			=   flares_default
+sky_texture		=	sky\sky_21_cube
 sky_rotation	=	0
-sky_color		=	0.50,	0.50,	0.50
-far_plane		=	200
-fog_color		=	0.204, 0.200, 0.204
-fog_density		=	0.95
-rain_density	=	0.2
+sky_color		=	1.0,    1.0,  	1.0
+far_plane		=	400
+fog_color		=	0.675, 0.675, 0.620
+fog_density		=	0.9
+rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
-thunderbolt		= 	on
+thunderbolt		= 	off
 bolt_period		=	3.f
 bolt_duration	=	0.25f
-wind_velocity	=	0.0 
+wind_velocity	=	20.0 
 wind_direction	=	0.0
-ambient			=	0.03,   0.03,  	0.03
+ambient			=	0.12,   0.12,  	0.12  
 lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.50,	0.50,	0.50, 50
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-25.0, 292
+hemi_color		=    0.675, 0.675, 0.620, 1
+sun_color		=	 0.50,    0.47,  	0.415
+sun_dir			=	-24.0, 292
 
 
 [sect_vibros]
@@ -970,7 +970,7 @@ sun_dir			=	-31.0, 296
 
 [thunderbolt_common]
 altitude				= 10, 20 			;altitude in deg (min/max по вертикали)
-delta_longitude			= 170				;in deg 	(разброс по горизонту)
+delta_longitude			= 17				;in deg 	(разброс по горизонту)
 min_dist_factor			= 0.94				;(<0.95) 	(расстояние от FAR_PLANE)
 tilt					= 17				;lightning tilt in deg (15-30) (отклонение молнии от оси)
 second_propability		= 0.5				;(0-1) 		(вероятность появления следующей молнии после этой)
