--- a/xr_3da/xrGame/zones.ltx
+++ b/xr_3da/xrGame/zones.ltx
@@ -462,7 +462,8 @@ artefacts		=
 BirthProbability = 0.9
 
 
-
+tearing_particles	= body_tear00
+torn_particles      = body_tear01
 idle_particles		= anomaly2\gravity_idle
 blowout_particles	= anomaly2\group_items\gravi_zaxvat_myasorubka ;gravity_blast_03
 
