--- a/xrStalker/zones.ltx
+++ b/xrStalker/zones.ltx
@@ -462,8 +462,8 @@ artefacts		=
 BirthProbability = 0.9
 
 
-tearing_particles	=anomaly2\body_tear00
-torn_particles      =anomaly2\body_tear01
+tearing_particles	=anomaly\body_tear00
+torn_particles      =anomaly\body_tear01
 idle_particles		= anomaly2\gravity_idle
 blowout_particles	= anomaly2\group_items\gravi_zaxvat_myasorubka ;gravity_blast_03
 
