--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -135,4 +135,16 @@ friend_fight_help_reputation  = 10
 neutral_fight_help_reputation = 10
 enemy_fight_help_reputation	  = 10
 
+;свойства, которые измен€ютс€ у сталкеров в 
+;зависимости от их ранга 
+;коэффициенты линейно интерполируютс€ дл€ рангов от 0 (novice) до 100 (experienced)
 
+[ranks_properties]
+immunities_novice_k			= 1
+immunities_experienced_k	= 1
+
+visibility_novice_k			= 1
+visibility_experienced_k	= 1
+
+dispersion_novice_k			= 1
+dispersion_experienced_k	= 1
