--- a/xrStalker/M_Chimera.ltx
+++ b/xrStalker/M_Chimera.ltx
@@ -107,11 +107,11 @@ Accel_Calm				= 1.5
 Accel_Aggressive		= 6.5
 
 ;attack parameters
-MinAttackDist		= 1.2	;0.5
-MaxAttackDist		= 2.7	;3.8
+MinAttackDist		= 5.8;1.2	;0.5
+MaxAttackDist		= 6.8;2.7	;3.8
 
 as_min_dist				= 0.5
-as_step					= 0.1
+as_step					= 0.4
 
 transparency_threshold  = 0.25
 
