--- a/xrStalker/M_Chimera.ltx
+++ b/xrStalker/M_Chimera.ltx
@@ -6,6 +6,7 @@
 stand_attack_0 =	  	0.45,		30,		    1000,       0.0, 1.0, 0.0,		 -1.0, 1.0, -1.0, 1.0,							  2.5
 stand_attack_1 =	  	0.45,		30,		    500,        0.0, 1.0, 0.0,		 -1.0, 1.0, -1.0, 1.0,							  2.5
 stand_attack_2 =	  	0.45,		30,			300,        0.0, 1.0, 0.0,		 -1.0, 1.0, -1.0, 1.0,							  2.5
+jump_attack_1  = 		0.45,		30,			10000,      0.0, 1.0, 0.0,		 -1.0, 1.0, -1.0, 1.0,							  2.5
 
 [m_chimera_attack_effector]
 
