--- a/xr_3da/xrGame/M_Cat.ltx
+++ b/xr_3da/xrGame/M_Cat.ltx
@@ -8,6 +8,7 @@
 stand_attack_0 =	  	0.25,		20,		    150,        0.0, 0.5, 1.0,		 -1.6, 1.6, -1.6, 1.6,								  3.5
 ;Both leg strike
 stand_attack_1 =	  	0.30,		30,		    330,        0.0, 0.5, 1.0,		 -1.6, 1.6, -1.6, 1.6,								  3.5
+stand_attack_rat_0 =	0.50,		30,			1300,		0.0, -0.5,1.0,       -0.6, 0.6, -1.6, 0.6,								2.0
 
 
 [m_cat_attack_effector]
