--- a/xrStalker/w_ak74u.ltx
+++ b/xrStalker/w_ak74u.ltx
@@ -21,6 +21,7 @@ ammo_mag_size			= 30				; clip (magazine) size
 ammo_class				= ammo_5.45x39_fmj, ammo_5.45x39_ap ; name of the ltx-section of used ammo 
 
 hand_dependence			= 1									; how many hands (1 or 2) we used to hold weapon in
+single_handed			= 0
 	
 slot 					= 2									; number of slot in inventory we put weapon in (1 - knife slot, 2 - pistol, 3 - rifle, 4 - grenade, 5 - apparatus)
 animation_slot			= 2									; type of the animation that will be used
