--- a/xrStalker/w_beretta.ltx
+++ b/xrStalker/w_beretta.ltx
@@ -23,6 +23,7 @@ hand_dependence		 		= 1
 							
 slot 			 			= 1
 animation_slot				= 1									; type of the animation that will be used
+single_handed				= 1
 
 inv_name					= Beretta
 inv_name_short				= Beretta
