--- a/xrStalker/w_fn2000.ltx
+++ b/xrStalker/w_fn2000.ltx
@@ -20,6 +20,8 @@ ammo_elapsed		     = 30
 ammo_mag_size		     = 30
 
 hand_dependence		     = 1
+single_handed			 = 0
+
 ammo_class		         = ammo_5.56x45_ss190, ammo_5.56x45_ap
 
 slot 			         = 2		; // secondary
