--- a/xrStalker/w_mp5.ltx
+++ b/xrStalker/w_mp5.ltx
@@ -22,6 +22,7 @@ ammo_mag_size		 	= 30
 ammo_class		 		= ammo_9x19_pbp, ammo_9x19_fmj
 
 hand_dependence		 	= 1
+single_handed			= 0
 
 inv_name				= MP5
 inv_name_short			= MP5
