--- a/xrStalker/w_bm16.ltx
+++ b/xrStalker/w_bm16.ltx
@@ -43,6 +43,7 @@ condition_shot_dec 			= 0.00003	;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
 hand_dependence 	 = 2
+single_handed				= 0
 
 slot 				= 2		; // secondary
 animation_slot		= 3		; type of the animation that will be used
