--- a/xrStalker/w_pb.ltx
+++ b/xrStalker/w_pb.ltx
@@ -21,6 +21,7 @@ ammo_mag_size			 	= 8
 ammo_class			 		= ammo_9x18_fmj, ammo_9x18_pbp, ammo_9x18_pmm
 	
 hand_dependence			 	= 1
+single_handed				= 1
 
 slot 				 		= 1
 animation_slot				= 1		; type of the animation that will be used
