--- a/xrStalker/w_svd.ltx
+++ b/xrStalker/w_svd.ltx
@@ -38,6 +38,7 @@ condition_shot_dec 				= 0.00003	;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
 hand_dependence 		= 1
+single_handed			= 0
 
 slot 					= 2		; // secondary
 animation_slot			= 2		; type of the animation that will be used
