--- a/xrStalker/w_svu.ltx
+++ b/xrStalker/w_svu.ltx
@@ -37,6 +37,8 @@ condition_shot_dec 				= 0.00003	;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
 hand_dependence 		= 1
+single_handed			= 0
+
 slot 			 		= 2		; // secondary
 animation_slot			= 2		; type of the animation that will be used
 
