--- a/xrStalker/w_ups.ltx
+++ b/xrStalker/w_ups.ltx
@@ -21,6 +21,7 @@ ammo_mag_size		 		= 8
 ammo_class		 			= ammo_11.43x23_hydro, ammo_11.43x23_fmj
 
 hand_dependence		 		= 1
+single_handed				= 1
 
 slot 			 			= 1
 animation_slot				= 1		; type of the animation that will be used
