--- a/xrStalker/w_walther.ltx
+++ b/xrStalker/w_walther.ltx
@@ -21,6 +21,7 @@ ammo_mag_size		 		= 16
 ammo_class		 			= ammo_9x19_fmj, ammo_9x19_pbp
 
 hand_dependence		 		= 1
+single_handed				= 1
 							
 slot 			 			= 1
 animation_slot				= 1									; type of the animation that will be used
