--- a/xr_3da/xrGame/w_binoc.ltx
+++ b/xr_3da/xrGame/w_binoc.ltx
@@ -7,23 +7,24 @@ discovery_dependency =
 $spawn                   = "weapons\binocular"					; option for Level Editor
 $npc			 = on				; option for Level Editor
 $prefetch 		 = 8
-scheduled                = off              ; option for ALife Simulator
-cform                    = skeleton
-class                    = W_BINOC
-hud                      = wpn_BINOC_hud
-position                 = 0, 0, .2
-normal                   = 0, 1, 0
-direction                = 0, 0, 1
-orientation              = -12, 7, 0
-visual                   = weapons\binoculars\wpn_binoculars.ogf
-hand_dependence		 = 1
+scheduled               = off              ; option for ALife Simulator
+cform                   = skeleton
+class                   = W_BINOC
+hud                     = wpn_BINOC_hud
+position                = 0, 0, .2
+normal                  = 0, 1, 0
+direction               = 0, 0, 1
+orientation             = -12, 7, 0
+visual                  = weapons\binoculars\wpn_binoculars.ogf
+hand_dependence		 	= 1
+single_handed			= 0
 
-slot 			 = 4		; // binocular
+slot 			 		= 4		; // binocular
 animation_slot			= 1		; type of the animation that will be used
 
 immunities_sect			= weapon
 
-inv_name		 = BINOCULAR
+inv_name		 		= BINOCULAR
 inv_name_short		 = BINOCULAR
 inv_weight		 = 1.0	;.5
 
