--- a/xr_3da/xrGame/w_desert_eagle.ltx
+++ b/xr_3da/xrGame/w_desert_eagle.ltx
@@ -22,6 +22,7 @@ ammo_class		 = ammo_11.43x23_fmj, ammo_11.43x23_hydro
 
 
 hand_dependence		 = 1
+single_handed				= 1
 
 slot 				 = 1		; // primary
 animation_slot		 = 1		; type of the animation that will be used
