--- a/xr_3da/xrGame/w_fort.ltx
+++ b/xr_3da/xrGame/w_fort.ltx
@@ -22,6 +22,7 @@ ammo_class		 = ammo_9x18_fmj, ammo_9x18_pbp, ammo_9x18_pmm
 
 
 hand_dependence		 = 1
+single_handed				= 1
 
 slot 				 = 1		; // primary
 animation_slot		 = 1		; type of the animation that will be used
