--- a/xr_3da/xrGame/w_groza.ltx
+++ b/xr_3da/xrGame/w_groza.ltx
@@ -23,9 +23,10 @@ ammo_class		 		= ammo_9x39_sp5, ammo_9x39_ap, ammo_9x39_pab9
 grenade_class			= ammo_vog-25, ammo_vog-25p
 
 hand_dependence		 	= 1
+single_handed			= 0
 
 slot 					= 2		; // secondary
-animation_slot			= 2		; type of the animation that will be used
+animation_slot			= 8		; type of the animation that will be used
 
 inv_name	         	= Groza
 inv_name_short		 	= Groza
