--- a/xr_3da/xrGame/w_knife.ltx
+++ b/xr_3da/xrGame/w_knife.ltx
@@ -24,6 +24,7 @@ immunities_sect		= weapon
 
 slot				= 0
 animation_slot		= 5		; type of the animation that will be used
+single_handed		= 1
 
 hud					= wpn_knife_hud
 force_min			= 25
