--- a/xr_3da/xrGame/w_l85.ltx
+++ b/xr_3da/xrGame/w_l85.ltx
@@ -23,7 +23,8 @@ ammo_class				= ammo_5.56x45_ss190, ammo_5.56x45_ap
 grenade_class			= ammo_m209
 
 hand_dependence			= 1
-	
+single_handed			= 0	
+
 slot 					= 2		; // secondary
 animation_slot			= 8		; type of the animation that will be used
 
