--- a/xr_3da/xrGame/w_mac10.ltx
+++ b/xr_3da/xrGame/w_mac10.ltx
@@ -22,6 +22,7 @@ ammo_class			= ammo_5.45x39_fmj, ammo_5.45x39_ap
 grenade_class			= ammo_vog-25, ammo_vog-25p
 
 hand_dependence			= 2
+single_handed				= 0
 	
 slot 				= 2		; // secondary
 inv_name	        	= MAC10
