--- a/xr_3da/xrGame/w_pm.ltx
+++ b/xr_3da/xrGame/w_pm.ltx
@@ -25,7 +25,7 @@ hand_dependence		 = 1
 
 slot 				 = 1
 animation_slot		 = 1		; type of the animation that will be used
-
+single_handed				= 1
 
 inv_name		= PM
 inv_name_short		= PM
