--- a/xr_3da/xrGame/w_rpg7.ltx
+++ b/xr_3da/xrGame/w_rpg7.ltx
@@ -27,6 +27,8 @@ ammo_mag_size		 = 1
 ammo_class		 = ammo_og-7b
 
 hand_dependence		 = 2
+single_handed				= 1
+
 slot 				 = 2
 animation_slot		 = 4		; type of the animation that will be used
 
