--- a/xr_3da/xrGame/w_val.ltx
+++ b/xr_3da/xrGame/w_val.ltx
@@ -22,6 +22,7 @@ ammo_mag_size				= 20
 ammo_class		 			= ammo_9x39_pab9, ammo_9x39_sp5, ammo_9x39_ap
 		
 hand_dependence		 		= 1
+single_handed				= 0
 	
 slot 				 		= 2		; // secondary
 animation_slot		 		= 8		; type of the animation that will be used
@@ -111,12 +112,12 @@ scope_zoom_factor		    = 50
 scope_texture				= wpn\wpn_crosshair
 
 ;звуки
-snd_draw			= weapons\generic_draw
-snd_holster			= weapons\generic_holster
-snd_shoot			= weapons\silencer4a
-snd_empty			= weapons\gen_empty, 0.5
-snd_reload			= weapons\val_reload, 0.7, 0.5
-snd_close			= weapons\generic_close
+snd_draw					= weapons\generic_draw
+snd_holster					= weapons\generic_holster
+snd_shoot					= weapons\silencer4a
+snd_empty					= weapons\gen_empty, 0.5
+snd_reload					= weapons\val_reload, 0.7, 0.5
+snd_close					= weapons\generic_close
 
  
 [wpn_val_hud]
