--- a/xr_3da/xrGame/w_vintorez.ltx
+++ b/xr_3da/xrGame/w_vintorez.ltx
@@ -1,43 +1,45 @@
 4;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
  
 [wpn_vintorez]
-GroupControlSection		 = spawn_group
-discovery_dependency 	 = 
-$spawn                   = "weapons\vintorez"					; option for Level Editor
-$npc                     = off
-$prefetch 		         = 8
-scheduled                = off                              ; option for ALife Simulator
-cform                    = skeleton
-class                    = W_VINT
-min_radius               = 50
-max_radius               = 150
+GroupControlSection		 	= spawn_group
+discovery_dependency 	 	= 
+$spawn                   	= "weapons\vintorez"					; option for Level Editor
+$npc                     	= off
+$prefetch 		         	= 8
+scheduled                	= off                              ; option for ALife Simulator
+cform                    	= skeleton
+class                    	= W_VINT
+min_radius               	= 50
+max_radius               	= 150
 
-cost					 = 2500	;4000
-weapon_class			 = sniper_rifle
+cost					 	= 2500	;4000
+weapon_class			 	= sniper_rifle
 
-ammo_limit		         = 180
-ammo_current		     = 90
-ammo_elapsed		     = 20
+ammo_limit		         	= 180
+ammo_current		     	= 90
+ammo_elapsed		     	= 20
 
-ammo_mag_size		     = 20
+ammo_mag_size		     	= 20
 
-hand_dependence		     = 1
-ammo_class		         = ammo_9x39_pab9, ammo_9x39_sp5, ammo_9x39_ap
+hand_dependence		     	= 1
+single_handed				= 0
 
-slot 			         = 2		; // secondary
-animation_slot			 = 8		; type of the animation that will be used
+ammo_class		         	= ammo_9x39_pab9, ammo_9x39_sp5, ammo_9x39_ap
 
-inv_name		         = Vintorez
-inv_name_short		     = Vintorez
-inv_weight		         = 2.5
+slot 			         	= 2		; // secondary
+animation_slot			 	= 8		; type of the animation that will be used
+	
+inv_name		         	= Vintorez
+inv_name_short		     	= Vintorez
+inv_weight		         	= 2.5
 
-inv_grid_width		= 5
-inv_grid_height		= 2
-inv_grid_x			= 0
-inv_grid_y			= 4
+inv_grid_width				= 5
+inv_grid_height				= 2
+inv_grid_x					= 0
+inv_grid_y					= 4
 
 
-immunities_sect		= weapon
+immunities_sect				= weapon
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
@@ -65,37 +67,37 @@ shell_point		 			= 0.0, 0.127, 0.10
 shell_dir		 			= 0.0, 1.0, 0.0
 shell_particles	 			= weapons\generic_shells
 
-rpm_empty_click 	     = 200
+rpm_empty_click 	     	= 200
 
 ; ttc
-hit_power                = 31.25
-hit_impulse		         = 87
+hit_power                	= 31.25
+hit_impulse		         	= 87
 hit_type = fire_wound
 
-fire_distance            = 300
-bullet_speed			 = 250			;начальная скорость пули
-rpm                      = 600
+fire_distance            	= 300
+bullet_speed			 	= 250			;начальная скорость пули
+rpm                      	= 600
 ; end ttc
 
-hud                      = wpn_vintorez_hud
-normal                   = 0, 1, 0
-position                 = -0.026, -0.084, 0.0
-orientation              = 0, 0, 0
-startup_ammo             = 1000
-visual                   = weapons\vintorez\wpn_vintorez.ogf
+hud                      	= wpn_vintorez_hud
+normal                   	= 0, 1, 0
+position                 	= -0.026, -0.084, 0.0
+orientation              	= 0, 0, 0
+startup_ammo             	= 1000
+visual                   	= weapons\vintorez\wpn_vintorez.ogf
+	
+tracer_head_speed	     	= 315
+tracer_trail_scale	     	= 0.75
+tracer_start_length	     	= 1
+tracer_width		     	= 0.07
+light_color		         	= 0.,0.,0.
+light_range		         	= 1.0
+light_var_color		     	= 0.05
+light_var_range		     	= 0.1
+light_time 		         	= 0.2
 
-tracer_head_speed	     = 315
-tracer_trail_scale	     = 0.75
-tracer_start_length	     = 1
-tracer_width		     = 0.07
-light_color		         = 0.,0.,0.
-light_range		         = 1.0
-light_var_color		     = 0.05
-light_var_range		     = 0.1
-light_time 		         = 0.2
-
-ph_mass			         = 4
-;cost			         = 5000
+ph_mass			         	= 4
+;cost			         	= 5000
 
 ;addons
 scope_status				= 1
@@ -103,33 +105,33 @@ silencer_status				= 0
 grenade_launcher_status		= 0
 zoom_enabled				= true
 
-scope_texture		= wpn\wpn_crosshair
+scope_texture				= wpn\wpn_crosshair
 
-zoom_enabled			= true
-scope_zoom_factor	    = 15
+zoom_enabled				= true
+scope_zoom_factor	    	= 15
 
 ;звуки
-snd_draw			= weapons\generic_draw
-snd_holster			= weapons\generic_holster
-snd_shoot			= weapons\silencer4a
-snd_empty			= weapons\gen_empty, 0.5
-snd_reload			= weapons\val_reload, 0.7, 0.5
-snd_shoot_grenade	= weapons\gen_grenshoot
-snd_reload_grenade	= weapons\gen_grenload
+snd_draw					= weapons\generic_draw
+snd_holster					= weapons\generic_holster
+snd_shoot					= weapons\silencer4a
+snd_empty					= weapons\gen_empty, 0.5
+snd_reload					= weapons\val_reload, 0.7, 0.5
+snd_shoot_grenade			= weapons\gen_grenshoot
+snd_reload_grenade			= weapons\gen_grenload
 
 
 
 [wpn_vintorez_hud]
 
-shell_point          = -0.15, -0.02, 0.05
-shell_dir			 = 0.0, 1.0, 0.0
+shell_point          		= -0.15, -0.02, 0.05
+shell_dir			 		= 0.0, 1.0, 0.0
 
 
-fire_point               = 0.320000,0.040000,0.070000
-fire_bone                = wpn_body
-orientation              = 0, 0, 0
-position                 = 0, 0, 0
-visual                   = weapons\vintorez\wpn_vintorez_hud.ogf
+fire_point               	= 0.320000,0.040000,0.070000
+fire_bone                	= wpn_body
+orientation              	= 0, 0, 0
+position                 	= 0, 0, 0
+visual                   	= weapons\vintorez\wpn_vintorez_hud.ogf
 
 anim_idle		= idle
 anim_idle_aim	= idle
@@ -139,6 +141,6 @@ anim_holster	= holster
 anim_shoot		= shoot
 
 ;смещения HUD для режима приближения
-zoom_offset			= -0.130000,0.000000,0.000000
-zoom_rotate_x		= 0.000000
-zoom_rotate_y		= 0.000000
+zoom_offset					= -0.130000,0.000000,0.000000
+zoom_rotate_x				= 0.000000
+zoom_rotate_y				= 0.000000
