--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -89,10 +89,10 @@ zombied		=         0.0
 ;очки рейтинга, получаемые за убийство персонажа
 ;с определенным статусом
 [rank_kill_points]
-novice        =        2
-veteran       =        6
-master        =        8
-super_master  =        10
+novice			=        2
+experienced		=        6
+veteran			=        8
+master			=        10
 
 
 ;очки рейтинга, репутации и доброжелательности начисляемые
