--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -6,7 +6,7 @@ reputation		= terrible, -100, very_bad, -50, bad, -20, neutral, 20, good, 50, ve
 ;шкалы для вывода названий вместо чисел 
 ;рейтингов, репутаций и благосклонности в интерфейсе
 rating_names		= novice, 30, experienced, 60, veteran, 90, master
-reputation_names	= terrible, -100, very_bad, -50, bad -20, neutral, 20, good, 50, very_good, 100, excellent
+reputation_names	= terrible, -100, very_bad, -50, bad, -20, neutral, 20, good, 50, very_good, 100, excellent
 goodwill_names      = deadly_enemy, -5000, enemy, -2000, hostile, -500, indifferent, 500, companionable, 2000, friendly
 
 
