--- a/xr_3da/xrGame/game_relations.ltx
+++ b/xr_3da/xrGame/game_relations.ltx
@@ -1,6 +1,6 @@
 [game_relations]
 ;реальное разделение на группы репутаций на шкалы
-rating			= novice, 30, experienced, 60, veteran, 90, master
+rating			= novice, 30 experienced, 60, veteran, 90, master
 reputation		= terrible, -100, very_bad, -50, bad, -20, neutral, 20, good, 50, very_good, 100, excellent
 
 ;шкалы для вывода названий вместо чисел 
