--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -189,12 +189,12 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
-flares			=  	flares_sun_rise
-sky_texture		=	sky\sky_22_cube
+flares			=	
+sky_texture		=	sky\sky_13_cube_night
 sky_rotation	=	0
-sky_color		=	1.0,    1.0,  	1.0
-far_plane		=	300
-fog_color		=	0.698, 0.447, 0.322
+sky_color		=	1.0,	1.0,	1.0
+far_plane		=	450
+fog_color		=	0.067, 0.067, 0.086
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -203,19 +203,19 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.1,  0.1, 	0.1
-lmap_color		=	1.0,    1.0,  	1.0
-hemi_color		=   0.75, 0.75, 0.75, 1
-sun_color		=	0.996, 0.659, 0.298
-sun_dir			=	-14.0, 292
+ambient			=	0.02,   0.02,  	0.02
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=   0.15,	0.15,	0.15,	1.0
+sun_color		=	0.0,    0.0,  	0.0
+sun_dir			=	-31.0, 296
 
 [default_a_02]
-flares			=  	flares_sun_rise
-sky_texture		=	sky\sky_22_cube
+flares			=	
+sky_texture		=	sky\sky_13_cube_night
 sky_rotation	=	0
-sky_color		=	1.0,    1.0,  	1.0
-far_plane		=	300
-fog_color		=	0.698, 0.447, 0.322
+sky_color		=	1.0,	1.0,	1.0
+far_plane		=	450
+fog_color		=	0.067, 0.067, 0.086
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -224,11 +224,11 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.1,  0.1, 	0.1
-lmap_color		=	1.0,    1.0,  	1.0
-hemi_color		=   0.75, 0.75, 0.75, 1
-sun_color		=	0.996, 0.659, 0.298
-sun_dir			=	-14.0, 292
+ambient			=	0.02,   0.02,  	0.02
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=   0.15,	0.15,	0.15,	1.0
+sun_color		=	0.0,    0.0,  	0.0
+sun_dir			=	-31.0, 296
 
 
 [sect_vibros]
@@ -427,9 +427,9 @@ bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
 ambient			=	0.043, 0.043, 0.055
-lmap_color		=	0.2,	0.2,	0.2;0.2,	0.2,	0.2
-hemi_color		=	0.0,    0.0,  	0.0
-sun_color		=	0.1,	0.1,	0.1;0.2,	0.2,	0.2
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=	0.2,	0.2,	0.2, 0.1
+sun_color		=   0.1, 0.1, 0.1
 sun_dir			=	-31.0, 296
 
 
@@ -449,9 +449,9 @@ bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
 ambient			=	0.043, 0.043, 0.055
-lmap_color		=	0.2,	0.2,	0.2;0.2,	0.2,	0.2
-hemi_color		=	0.0,    0.0,  	0.0
-sun_color		=	0.1,	0.1,	0.1;0.2,	0.2,	0.2
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=	0.2,	0.2,	0.2, 0.1
+sun_color		=   0.1, 0.1, 0.1
 sun_dir			=	-31.0, 296
 
 
@@ -471,9 +471,9 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.02,   0.02,  	0.02; 0.03,   0.03,  	0.03
-lmap_color		=	0.15,	0.15,	0.15;0.2,	0.2,	0.2
-hemi_color		=	0.0,    0.0,  	0.0
+ambient			=	0.02,   0.02,  	0.02
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=   0.15,	0.15,	0.15,	1.0
 sun_color		=	0.0,    0.0,  	0.0
 sun_dir			=	-31.0, 296
 
