--- a/xrStalker/m_bandit.ltx
+++ b/xrStalker/m_bandit.ltx
@@ -137,10 +137,11 @@ damage				 = stalker_damage
 sound_death			 = monsters\stalker\death\em1_killed
 sound_hit			 = monsters\human\combat\ukr\ukr1_damage,monsters\stalker\wound\wound
 sound_humming		 = monsters\stalker\humming\em1_humming,monsters\stalker\humming\em1_whistle
-sound_alarm			 = monsters\human\combat\ukr\ukr1_
-sound_surrender		 = monsters\human\combat\ukr\ukr1_finding
-sound_backup		 = monsters\human\combat\ukr\ukr1_finding
-sound_attack		 = monsters\human\combat\ukr\ukr1_attack
+sound_alarm			 = monsters\human\combat\ukr\alarm\ukr1_
+sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
+sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
+sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
+sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
@@ -327,10 +328,11 @@ damage				 = stalker_damage
 sound_death			 = monsters\stalker\death\em1_killed
 sound_hit			 = monsters\human\combat\ukr\ukr1_damage,monsters\stalker\wound\wound
 sound_humming		 = monsters\stalker\humming\em1_humming,monsters\stalker\humming\em1_whistle
-sound_alarm			 = monsters\human\combat\ukr\ukr1_
-sound_surrender		 = monsters\human\combat\ukr\ukr1_finding
-sound_backup		 = monsters\human\combat\ukr\ukr1_finding
-sound_attack		 = monsters\human\combat\ukr\ukr1_attack
+sound_alarm			 = monsters\human\combat\ukr\alarm\ukr1_
+sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
+sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
+sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
+sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
