--- a/xr_3da/xrGame/m_stalker.ltx
+++ b/xr_3da/xrGame/m_stalker.ltx
@@ -150,10 +150,11 @@ damage				 = stalker_damage
 sound_death			 = monsters\stalker\death\em1_killed
 sound_hit			 = monsters\human\combat\ukr\ukr1_damage,monsters\stalker\wound\wound
 sound_humming		 = monsters\stalker\humming\em1_humming,monsters\stalker\humming\em1_whistle
-sound_alarm			 = monsters\human\combat\ukr\ukr1_
-sound_surrender		 = monsters\human\combat\ukr\ukr1_finding
-sound_backup		 = monsters\human\combat\ukr\ukr1_otstup
-sound_attack		 = monsters\human\combat\ukr\ukr1_attack
+sound_alarm			 = monsters\human\combat\ukr\alarm\ukr1_
+sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
+sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
+sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
+sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
@@ -314,10 +315,11 @@ damage				 = stalker_damage
 sound_death			 = monsters\stalker\death\em1_killed
 sound_hit			 = monsters\stalker\wound\wound
 sound_humming		 = monsters\stalker\humming\em1_humming,monsters\stalker\humming\em1_whistle
-sound_alarm			 = monsters\stalker\alarm\alarm
-sound_surrender		 = monsters\stalker\surrender\em1_surrender
-sound_backup		 = monsters\stalker\combat\ai1_hiding_
-sound_attack		 = monsters\stalker\combat\ai1_attack_
+sound_alarm			 = monsters\human\combat\ukr\alarm\ukr1_
+sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
+sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
+sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
+sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
@@ -477,10 +479,11 @@ damage				 = stalker_damage
 sound_death			 = monsters\stalker\death\em1_killed
 sound_hit			 = monsters\human\combat\ukr\ukr1_damage,monsters\stalker\wound\wound
 sound_humming		 = monsters\stalker\humming\em1_humming,monsters\stalker\humming\em1_whistle
-sound_alarm			 = monsters\human\combat\ukr\ukr1_
-sound_surrender		 = monsters\human\combat\ukr\ukr1_finding
-sound_backup		 = monsters\human\combat\ukr\ukr1_finding
-sound_attack		 = monsters\human\combat\ukr\ukr1_attack
+sound_alarm			 = monsters\human\combat\ukr\alarm\ukr1_
+sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
+sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
+sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
+sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
