--- a/xr_3da/xrGame/m_army.ltx
+++ b/xr_3da/xrGame/m_army.ltx
@@ -142,6 +142,8 @@ sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
 sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
 sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
 sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
+; this sound type is obsolete
+sound_surrender		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
@@ -306,6 +308,8 @@ sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
 sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
 sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
 sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
+; this sound type is obsolete
+sound_surrender		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
@@ -469,6 +473,8 @@ sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
 sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
 sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
 sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
+; this sound type is obsolete
+sound_surrender		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
@@ -632,6 +638,8 @@ sound_attack		 = monsters\human\combat\ukr\attack\ukr1_attack
 sound_backup		 = monsters\human\combat\ukr\backup\ukr1_otstup
 sound_detour		 = monsters\human\combat\ukr\detour\ukr1_detour
 sound_search		 = monsters\human\combat\ukr\search\ukr1_finding
+; this sound type is obsolete
+sound_surrender		 = monsters\human\combat\ukr\search\ukr1_finding
 sound_friendly_fire	 = script_sound\reactions\friendly_fire\soldier\soldier_friendlyfire_
 sound_panic_human	 = monsters\human\combat\ukr\ukr1_surrender,monsters\stalker\surrender\em1_surrender,monsters\stalker\copy\default\surrender\em1_surrender
 sound_panic_monster	 = script_sound\help\soldier\soldier_help_
