--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -189,12 +189,12 @@ sun_dir			=	-40.0, 60.0
 12:00:00		=	default_a_02
 
 [default_a_01]
-flares			=	flares_gradient	
-sky_texture		=	sky\sky_9_cube
+flares			=  	flares_sun_rise
+sky_texture		=	sky\sky_22_cube
 sky_rotation	=	0
 sky_color		=	1.0,    1.0,  	1.0
 far_plane		=	300
-fog_color		=	0.271,	0.278,	0.290
+fog_color		=	0.698, 0.447, 0.322
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -203,20 +203,20 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.06,   0.06,  	0.06
-lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.7,    0.7,  	0.7,	1.0
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-28.0, 292
+ambient			=	0.1,  0.1, 	0.1
+lmap_color		=	1.0,    1.0,  	1.0
+hemi_color		=   0.75, 0.75, 0.75, 1
+sun_color		=	0.996, 0.659, 0.298
+sun_dir			=	-14.0, 292
 
 
 [default_a_02]
-flares			=	flares_gradient	
-sky_texture		=	sky\sky_9_cube
+flares			=  	flares_sun_rise
+sky_texture		=	sky\sky_22_cube
 sky_rotation	=	0
 sky_color		=	1.0,    1.0,  	1.0
 far_plane		=	300
-fog_color		=	0.271,	0.278,	0.290
+fog_color		=	0.698, 0.447, 0.322
 fog_density		=	0.9
 rain_density	=	0.0
 rain_color		=	1.0,	1.0,	1.0
@@ -225,11 +225,11 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.06,   0.06,  	0.06
-lmap_color		=	1.0,	1.0,	1.0
-hemi_color		=	0.7,    0.7,  	0.7,	1.0
-sun_color		=	0.0,    0.0,  	0.0
-sun_dir			=	-28.0, 292
+ambient			=	0.1,  0.1, 	0.1
+lmap_color		=	1.0,    1.0,  	1.0
+hemi_color		=   0.75, 0.75, 0.75, 1
+sun_color		=	0.996, 0.659, 0.298
+sun_dir			=	-14.0, 292
 
 
 [sect_vibros]
@@ -698,8 +698,8 @@ bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
 ambient			=	0.06,   0.06,  	0.06
-lmap_color		=	1.25,	1.25,	1.25
-hemi_color		=	0.0,    0.0,  	0.0
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=	0.7,    0.7,  	0.7,	1.0
 sun_color		=	0.0,    0.0,  	0.0
 sun_dir			=	-28.0, 292
 
