--- a/xrStalker/game_relations.ltx
+++ b/xrStalker/game_relations.ltx
@@ -113,6 +113,10 @@ friend_kill_goodwill			= 0
 neutral_kill_goodwill			= 0
 enemy_kill_goodwill				= 0
 
+;убийство члена группировки отражается на отношении
+;группировки (умножается на communities_sympathy)
+community_member_kill_goodwill  = -10
+
 friend_kill_reputation			= -20
 neutral_kill_reputation			= -10
 enemy_kill_reputation			= 0
