--- a/xr_3da/xrGame/environment.ltx
+++ b/xr_3da/xrGame/environment.ltx
@@ -1,8 +1,8 @@
 [weathers]
 ;sarkofag        = sect_sarkofag
 ;vibros          =sect_vibros
-;all_no_vert      =sect_all_no_vert
-aaa = sect_aaa
+all_no_vert      =sect_all_no_vert
+;aaa = sect_aaa
 
 [flares_default10]
 flare_opacity            = 0.240, 0.160, 0.400, 0.320, 0.160, 0.160
@@ -961,9 +961,9 @@ bolt_period		=	3.f
 bolt_duration	=	0.25f
 wind_velocity	=	0.0 
 wind_direction	=	0.0
-ambient			=	0.02,   0.02,  	0.02; 0.03,   0.03,  	0.03
-lmap_color		=	0.15,	0.15,	0.15
-hemi_color		=	0.0,    0.0,  	0.0
+ambient			=	0.02,   0.02,  	0.02
+lmap_color		=	1.0,	1.0,	1.0
+hemi_color		=   0.25,	0.25,	0.25,	1.0
 sun_color		=	0.0,    0.0,  	0.0
 sun_dir			=	-31.0, 296
 
